# ex_v_ex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml
bench/: memory_profile.exs  put_cell_benchmark.exs
bench/comparative/: README.md  spec.json
bench/comparative/elixir/: bench.exs
bench/comparative/python/: bench.py
bench/comparative/rust/: Cargo.toml
bench/comparative/rust/src/: main.rs
bench/results/: README.md  after.txt  baseline.txt
lib/: ex_v_ex.ex
lib/ex_v_ex/: style.ex  workbook.ex
lib/ex_v_ex/bench/: report.ex
lib/ex_v_ex/ooxml/: shared_strings.ex  styles.ex  workbook.ex  worksheet.ex
lib/ex_v_ex/ooxml/styles/: alignment_record.ex  cell_format.ex  num_fmt.ex
lib/ex_v_ex/ooxml/workbook/: sheet_ref.ex
lib/ex_v_ex/ooxml/worksheet/: cell.ex  editable.ex
lib/ex_v_ex/packaging/: content_types.ex  relationships.ex  zip.ex
lib/ex_v_ex/packaging/content_types/: default.ex  override.ex
lib/ex_v_ex/packaging/relationships/: relationship.ex
lib/ex_v_ex/packaging/zip/: entry.ex
lib/ex_v_ex/style/: alignment.ex  border.ex  color.ex  fill.ex  font.ex  side.ex
lib/ex_v_ex/utils/: coordinate.ex  range.ex
lib/mix/tasks/: bench.comparative.ex
test/: ex_v_ex_test.exs
test/ex_v_ex/: creation_test.exs
test/ex_v_ex/ooxml/: shared_strings_test.exs  styles_test.exs  workbook_test.exs  worksheet_test.exs
test/ex_v_ex/packaging/: content_types_test.exs  relationships_test.exs  zip_test.exs
test/ex_v_ex/utils/: coordinate_test.exs  range_test.exs
test/support/: fixtures.ex
