[package]
name = "exvex_bench_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
umya-spreadsheet = { path = "../../../../umya-spreadsheet" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
